classDiagram
    direction LR

    %% --- THE LIBRARIANS (DAOs) ---
    class DAOUser {
        +listAllUsers()
        +addUser(User)
        +updateUser(id, data)
        +deleteUser(id)
        +searchByEmail(email)
        +searchByUsernameOrEmail(string)
    }

    class DAOChild {
        +listAllChildren()
        +addChild(Child)
        +getChildrenByUser(user_id)
    }

    class DAOTap {
        +listAllTaps()
        +addTap(Tap)
        +getTapsByChild(child_id)
    }

    %% --- THE DATA OBJECTS (Models) ---
    class User {
        +int id
        +string username
        +string password
        +string email
    }

    class Child {
        +int id
        +string child_name
        +int sleep_average
    }

    class Tap {
        +int id
        +int child_id
        +int user_id
        +datetime init
    }

    %% --- CONNECTIONS ---
    DAOUser "1" --o "*" User : manages
    DAOChild "1" --o "*" Child : manages
    DAOTap "1" --o "*" Tap : manages

    User "n" -- "n" Child : linked via relation_user_child
    Child "1" -- "*" Tap : has records